--- a/_data/data.yml
+++ b/_data/data.yml
@@ -4,7 +4,7 @@
 
 sidebar:
     position: right # position of the sidebar : left or right
-    about: True # set to False or comment line if you want to remove the "how to use?" in the sidebar
+    about: False # set to False or comment line if you want to remove the "how to use?" in the sidebar
     education: False # set to False if you want education in main section instead of in sidebar
 
     # Profile information
@@ -33,22 +33,22 @@ sidebar:
     languages:
       title: 语言
       info:
-        - idiom: English
-          level: Native
+        - idiom: 汉语
+          level: 母语
 
         - idiom: 英语
           level: 六级
 
     interests:
-      title: Interests
+      title: 兴趣
       info:
-        - item: Climbing
+        - item: 摄影
           link:
 
-        - item: Snowboarding
+        - item: 钢琴
           link:
 
-        - item: Cooking
+        - item: 科学探索
           link:
 
 career-profile:
@@ -83,7 +83,7 @@ education:
             - Bullet point
 
 experiences:
-    title: Experiences
+    title: 荣誉经历
     info:
       - role: Lead Developer
         time: 2015 - Present
