--- a/_data/data.yml
+++ b/_data/data.yml
@@ -144,7 +144,7 @@ projects:
         link: "#hook"
         tagline: |
           "A responsive website template designed to help startups promote, market and sell their products."
-          ![](/assets/images/NS.png)
+          ![](assets/images/NS.png)
 
       - title: 见闻-时空新闻数字生成平台
         link: "#"
