Fix image style.

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -51,9 +51,9 @@ sidebar:
 career-profile:
     title: 概述
     summary: |
-      我目前在武汉大学资源与环境科学学院攻读地图学与地理信息系统博士学位。
-      研究方向是社会感知、时空机器学习。
-      我的导师是[苏世亮教授](http://jszy.whu.edu.cn/sushiliang/zh_CN/index.htm)
+      我目前在武汉大学资源与环境科学学院攻读地图学与地理信息系统博士学位。  
+      研究方向：社会感知、时空机器学习  
+      导师：[苏世亮教授](http://jszy.whu.edu.cn/sushiliang/zh_CN/index.htm)
       
 education:
     title: 教育经历
