--- a/_data/data.yml
+++ b/_data/data.yml
@@ -353,22 +353,22 @@ projects:
       在本科与研究生期间，分别独立开发了两个个人项目。同时，在本科期间参与一个面向企业的工程项目。
     assignments:
       - title: 武汉衡德实业IMS系统
-        link: "#"
+        link: 
         tagline: |
-          武汉衡德实业主要从事于塑料制品的生产与销售。针对企业业务，实现了一套IMS系统，包括了进销存、财务、人事等模块。
+          武汉衡德实业主要从事于塑料制品的生产与销售。针对企业业务，实现了一套IMS系统，包括了物料管理、生产管理、销售管理、财务管理等模块。
 
           同时，针对注塑机的生产过程，实现了一套生产监控系统，实现了对注塑机的实时监控与异常品智能检测。
           
 
       - title: 图讯News Map
-        link: "#"
+        link: 
         tagline: |
           在大数据时代，新闻资讯作为获取信息的有效途径，存在信息冗杂、分类不清、表达不直观等问题。为此，我们不断寻找创新新闻表现形式的突破口，发现地图作为一类重要的信息载体，在信息展示方面具有直观、多维的特点。目前市面上少有新闻地图结合产品，且未形成时空上的多维呈现，在缺少关联性的同时，也缺乏对新闻的深度剖析，无法满足人们对于新闻时空概念、个性化地图等信息的需求。
           
           针对上述现象，我们开发了图讯News Map这样一款围绕数据获取、分析与处理的产品。本作品相较于其他产品，更注重信息的个性化推荐、时空多维展示与分析，能够紧紧抓住市场关于新闻地图的需求，从新闻时空特征的可视化呈现出发，延伸出更多创新性功能，旨在推动时空大数据时代背景下新闻融媒体的创新发展。
 
       - title: 见闻-时空新闻数字生成平台
-        link: "#"
+        link: 
         tagline: |
           传统的新闻主要使用文字进行描述，然而，新闻事件本身包含诸如地点、上下文线索、发展历程等无法用文字充分表达的信息，这使得传统新闻缺失了时间线索和空间线索。
 
@@ -386,11 +386,11 @@ oss:
       针对开源项目的贡献，包括代码提交、文档撰写、问题反馈等。
     contributions:
       - title: PaddleNLP
-        link: "#"
+        link: "https://github.com/PaddlePaddle/PaddleNLP"
         tagline: PaddleNLP是国产飞桨深度学习框架下的自然语言处理工具库。我在其中提交了一些代码，帮助改进了部分功能。
 
       - title: Coqui
-        link: "#"
+        link: "https://github.com/coqui-ai/TTS"
         tagline: Coqui是目前最流行的TTS（文本转语音）开源项目。我在其中贡献了中文语音模型的训练。
 
 publications:
