--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,7 +78,7 @@ education:
 experiences:
     title: 荣誉经历
     info:
-      - role: 2023中国高效计算机大赛-人工智能创意赛  全国三等奖
+      - role: 2023中国高校计算机大赛-人工智能创意赛  全国三等奖
         time: 2023.12
         company: 全国高等学校计算机教育研究会
         details:
