--- a/_data/data.yml
+++ b/_data/data.yml
@@ -379,6 +379,10 @@ certifications:
         - [Advanced Writing](https://coursera.org/share/a7e1553e3bc07fae0c0ba5838e7b7f6e)
         - [Introduction to Research for Essay Writing](https://coursera.org/share/71a3ed754b799e36f6e0c5d7d217f883)
         - Project: Writing a Research Paper (To be done)
+    - name: 阅读书籍
+      details: |
+        - [经济学原理.曼昆](https://book.douban.com/subject/26435630/)
+        - [因果推断实用计量方法.邱嘉平](https://book.douban.com/subject/35177003/)
 
 projects:
     title: 项目
