--- a/_data/data.yml
+++ b/_data/data.yml
@@ -118,6 +118,10 @@ experiences:
         time: 2020.11
         company: 中国测绘学会
         details:
+      - role: 国家大学生创新创业训练计划 优秀项目
+        time: 2020.11
+        company: 武汉大学
+        details:
       - role: 中国大学生计算机设计大赛  全国一等奖
         time: 2020.8
         company: 教育部高等学校计算机类专业教学指导委员会
@@ -387,15 +391,24 @@ certifications:
 projects:
     title: 项目
     intro: >
-      在本科与研究生期间，分别独立开发了两个个人项目。同时，在本科期间参与一个面向企业的工程项目。
+      在本科与研究生期间，分别独立开发了两个个人项目。同时，在本科期间参与一个面向校园学生的服务项目，一个面向企业的工程项目。
     assignments:
+
+      - title: 武汉大学“梦想珈”微信小程序
+        link: 
+        tagline: |
+          该小程序初衷为给武汉大学学生会提供信息化服务，后面向全校学生提供生活、学习方面的信息服务。
+          
+          该项目开始于2018年暑假。项目初期，开发团队共两人，我作为项目创立阶段的核心开发者，负责前端开发。
+
       - title: 武汉衡德实业IMS系统
         link: 
         tagline: |
           武汉衡德实业主要从事于塑料制品的生产与销售。针对企业业务，实现了一套IMS系统，包括了物料管理、生产管理、销售管理、财务管理等模块。
 
           同时，针对注塑机的生产过程，实现了一套生产监控系统，实现了对注塑机的实时监控与异常品智能检测。
-          
+
+          该项目开始于2019年春，开发团队共三人。我作为核心开发者，于另一成员共同负责后端开发。
 
       - title: 图讯News Map
         link: 
